# presupposition

./: #K.hs#  .#P.hs  CHANGELOG.md  D.hs  D.hs~  InfoStates.hs  InfoStates.hs~  K.hs  K.hs~  LICENSE  Model.hs  Model.hs~  P.hs  P.hs~  README  README.md  presupposition.cabal  stack.yaml
.stack-work/: stack.sqlite3
src/: D.hs  InfoStates.hs  K.hs  Main.hs  Model.hs  P.hs  Q.hs
