name:                presupposition
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/julangrove/presupposition#readme
license:             MIT
license-file:        LICENSE
author:              Julian Grove
maintainer:          julian.grove@gmail.com
copyright:           2019 Julian Grove
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable presupposition
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , effect-monad
                     , type-level-sets
  other-modules:       P, D, K, InfoStates, Model